Eugene:  new gpu tiling code.  precision and warp size set in Makefile.

--- a/cublas_examples/GPU_TILING/Makefile
+++ b/cublas_examples/GPU_TILING/Makefile
@@ -1,4 +1,14 @@
-CFLAGS    = -O2 
+
+
+# PRECISION: VALID OPTIONS ARE SINGLE OR DOUBLE
+
+PRECISION=DOUBLE
+
+# WARP: WARP SIZE FOR OPTIMAL GPU COMPUTING ... gadzooks WARP=32
+
+WARP=32
+
+CFLAGS    = -O2  -D$(PRECISION) -DWARP=$(WARP)
 EXEC      = gputiles.x 
 CXX       = g++
 
