eugene: tiled mat-mult for 2 square matrices or 2 mats of dim (m x n).(n x m)

--- a/cublas_examples/GPU_TILING/Makefile
+++ b/cublas_examples/GPU_TILING/Makefile
@@ -8,7 +8,7 @@ PRECISION=DOUBLE
 
 WARP=32
 
-CFLAGS    = -O2  -D$(PRECISION) -DWARP=$(WARP)
+CFLAGS    = -O2  -D$(PRECISION) -DWARP=$(WARP) -Wall
 EXEC      = gputiles.x 
 CXX       = g++
 
