Jeff: tweaks for BGP

--- a/thread_examples/Makefile
+++ b/thread_examples/Makefile
@@ -1,6 +1,9 @@
-CC=gcc
-CFLAGS=-g -O2 -fopenmp # -Wall
-LIBS=-lpthread -lgomp
+#CC=gcc
+#CFLAGS=-g -O2 -fopenmp
+#LIBS=-lpthread -lgomp
+CC=mpixlc_r
+CFLAGS=-g -O3 -qstrict -qsmp=omp
+LIBS=-lpthread 
 EXE=omp_pthread_test
 
 $(EXE) : $(EXE).o
@@ -14,3 +17,8 @@ clean:
 
 realclean: clean
 	rm $(EXE) 
+
+submit: $(EXE)
+	qsub --mode smp -n 1 -t 10 --env OMP_NUM_THREADS=4 $(EXE)
+
+
